Fixed: bh_check_styles.php works correctly to find classes with child tag definitions (e.g. spoiler a:hover) Added: Option to artificially change the user's post count and reset it back to normal. Added: Mouseover spoiler highlight to lite mode. Not in full mode at the moment. Will change this to user configurable option. Added: Check for Windows CE powered Smartphones that shows the spoiler so it's readable in Pocket IE. Changed: USER_TIME_LAST now USER_TIME_BEST and stores the user's longest session rather than last session.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -621,6 +621,36 @@ a {
     padding: 3px;
 }
 
+.spoiler a {
+    display: block;
+    text-decoration: none;
+    color: #EEEEEE;
+}
+
+.spoiler a:hover {
+    display: block;
+    text-decoration: none;
+    color: #000000;
+}
+
+.spoiler_light {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    border: 1px solid #CCCCCC;
+    color: #CCCCCC;
+    background-color: #EEEEEE;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: 40px;
+    margin-right: 10px;
+    padding: 3px;
+}
+
+.spoiler_light a {
+    display: block;
+    text-decoration: none;
+    color: #CCCCCC;
+}
+
 .tools {
     margin: 0;
     margin-bottom: 3px;
